test and fix all api